# tf-alexnet

./: README.md  docker-compose.yml  main.py  pyproject.toml
conf/: config.yaml
