[tool.poetry]
name = "tf-alexnet"
version = "0.1.0"
description = "AlexNet FashionMNIST with Tensorflow"
authors = ["sehandev"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7, <3.10"
tensorflow = "^2.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
