[tool.poetry]
name = "tf-alexnet"
version = "0.1.0"
description = "AlexNet FashionMNIST with Tensorflow"
authors = ["sehandev"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7, <3.10"
tensorflow = "^2.9.1"
hydra-core = "^1.2.0"

[tool.poetry.group.dev.dependencies]
black = {version = "^22.8.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
